--- a/ulc/base/frontend/paper_lantern/todo/index.html.tt
+++ b/ulc/base/frontend/paper_lantern/todo/index.html.tt
@@ -12,7 +12,7 @@ USE JSON;
 #          app_3     => "../../../"
 #    app_4           => "../"
 #
-SET CPANEL.CPVAR.dprefix = "../";
+SET CPANEL.CPVAR.dprefix = "../../../";
 
 # If you plugin installs so it participates in feature control.
 #SET has_feature = CPANEL.feature('plugin_cpanel_todo');
