Step 4: Use some components from cjt 2.0

--- a/ulc/base/frontend/paper_lantern/todo/index.html.tt
+++ b/ulc/base/frontend/paper_lantern/todo/index.html.tt
@@ -39,6 +39,7 @@ WRAPPER '_assets/master.html.tt'
 
     <div class="body-content">
         <div ng-controller="applicationController">
+            <cp-alert-list></cp-alert-list>
             <div id="viewContent"
                  class="ng-cloak"
                  ng-view
