--- a/ulc/whostmgr/docroot/templates/todo/config.tmpl
+++ b/ulc/whostmgr/docroot/templates/todo/config.tmpl
@@ -4,22 +4,24 @@
         <link rel="stylesheet" type="text/css" href="config.css">
     </head>
     <body>
-        <form>
-             <label>
-               <input type="checkbox" value="">
-               <span>Allow Todo Access in cPanel</span>
-             </label>
-             <span class="help-block">Users may manage their own list of TODO items from cPanel</span>
-             <label>
-               <input type="checkbox" value="">
-               <span>Allow Todo Access in WebMail</span>
-             </label>
-             <span class="help-block">Users may manage their own list of TODO items from WebMail</span>
-             <label>
-               <input type="checkbox" value="">
-               <span>Allow Todo Access in Web Host Manager</span>
-             </label>
-             <span class="help-block">Users may manage their own list of TODO items from Web Host Manager</span>
-        </form>
+
+        <div class="body-content">
+            <div ng-controller="applicationController">
+                <div class="container-fluid">
+                    <cp-alert-list></cp-alert-list>
+                </div>
+                <div id="viewContent"
+                     class="ng-cloak"
+                     ng-view
+                     ng-cloak></div>
+            </div>
+        </div>
+
+        <script type="text/javascript">
+            PAGE.config = []; // TODO: Add prefetch data
+        </script>
+
+        [% PROCESS '_assets/cjt2_header_include.tt' %]
+
     </body>
 </html>
