Step 7: Add the new todo view and its supporting code

--- a/ulc/base/frontend/paper_lantern/todo/index.css
+++ b/ulc/base/frontend/paper_lantern/todo/index.css
@@ -39,3 +39,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. */
 .row-shaded {
     background-color: #ddd;
 }
+
+.btn-add {
+    margin-bottom: 10px;
+}
